updated bcrypt to bcryptjs

--- a/backend/.env
+++ b/backend/.env
@@ -4,4 +4,4 @@ DATABASE_NAME = gfgbackend
 DATABASE_HOST = localhost
 DATABASE_USER = postgres
 COOKIE_SECRET = ksajskjdh1212qsd
-CLIENT_URL = https://05d2-218-212-39-244.ngrok-free.app
+CLIENT_URL = https://05d2-218-212-39-244.ngrok-free.app # to expose backend to apk using ngrok
