--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     "@supabase/supabase-js": "^2.50.2",
     "@whatsapp-clone/common": "file:../common",
     "expo": "~53.0.9",
+    "expo-apple-authentication": "~7.2.4",
     "expo-application": "~6.1.4",
     "expo-auth-session": "~6.1.5",
     "expo-blur": "~14.1.4",
