--- a/client/package.json
+++ b/client/package.json
@@ -49,6 +49,7 @@
     "react-native-gesture-handler": "~2.24.0",
     "react-native-modal-selector": "^2.1.2",
     "react-native-picker-select": "^9.3.1",
+    "react-native-progress": "^5.0.1",
     "react-native-reanimated": "^3.18.0",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.10.0",
